# p4tc-py

./: .gitignore  README.md  pyproject.toml
src/p4tc/: __init__.py  _cdefs.py  _ffi.py  _schema.py  context.py  entry.py  errors.py  provision.py  types.py
tests/: conftest.py  test_cdefs.py  test_context.py  test_schema.py  test_types.py
