[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "p4tc"
version = "0.1.0"
description = "Python bindings for the P4TC runtime C API"
requires-python = ">=3.10"
dependencies = ["cffi>=1.16"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
